--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+boto3 <=1.15.18
+gluonnlp >= 0.6.0, <=0.10.0
 tqdm
 torch
 transformers
 pandas
 numpy
 folium
+scikit-learn
 accelerate
 sentencepiece
+mxnet
